--- a/devops/k8s/kl_deploy_app.yml
+++ b/devops/k8s/kl_deploy_app.yml
@@ -34,7 +34,7 @@ spec:
                   name: kl-backend-secrets
                   key: django_secret
             - name: DJ_ALLOWED_HOSTS
-              value: "app.teleklasa.lokalni.pl,klasa.jest.pro"
+              value: "app-teleklasa.lokalni.pl"
 ---
 apiVersion: v1
 kind: Service
