Fixed domain validation on prod

--- a/devops/k8s/kl_deploy_app.yml
+++ b/devops/k8s/kl_deploy_app.yml
@@ -35,6 +35,8 @@ spec:
                   key: django_secret
             - name: DJ_ALLOWED_HOSTS
               value: "app-teleklasa.lokalni.pl"
+            - name: DJ_BBB_DOMAIN_ALLOWED
+              value: "bbb.lokalni.pl"
 ---
 apiVersion: v1
 kind: Service
