--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ djangorestframework==3.11.0
 psycopg2-binary==2.8.4
 requests==2.23.0
 dj-static==0.0.6
+# temporary add test requirements to prod, lol
+model_mommy
+freezegun
