--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.11",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
