--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django==2.2.10
 django-environ==0.4.5
 djangorestframework==3.11.0
+django-filter
 django-cors-headers==3.2.1
 psycopg2-binary==2.8.4
 requests==2.23.0
