--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,17 +9,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.3.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lodash": "^4.17.11",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-toasted": "^1.1.28",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.9.2",
     "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-unit-mocha": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
