--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-toasted": "^1.1.28",
