let's try to run server

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,6 +53,17 @@ jobs:
           DJ_CORS_ORIGIN_WHITELIST: '*'        
         run:
           python manage.py dbseed
+      - name: Run server
+        env:
+          DJ_DOMAIN: http://localhost:8080
+          DJ_SECRET_KEY: jakisklucz
+          DJ_DATABASES_DEFAULT_URL: postgresql://localhost/main?user=db-user&password=db-pass
+          DJ_DEBUG: True
+          DJ_ALLOWED_HOSTS: localhost,127.0.0.1,kl-backend
+          DJ_CORS_ORIGIN_WHITELIST: '*'
+        run:
+          python manage.py runserver 0.0.0.0:8000
+
       - name: Run Tests
         env:
           DJ_DOMAIN: http://localhost:8080
@@ -61,5 +72,5 @@ jobs:
           DJ_DEBUG: True
           DJ_ALLOWED_HOSTS: localhost,127.0.0.1,kl-backend
           DJ_CORS_ORIGIN_WHITELIST: '*'
-        run: |
+        run: 
           python manage.py test
