let's try different approach

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,9 +61,8 @@ jobs:
           DJ_DEBUG: True
           DJ_ALLOWED_HOSTS: localhost,127.0.0.1,kl-backend
           DJ_CORS_ORIGIN_WHITELIST: '*'
-        run:
+        run: |
           python manage.py runserver 0.0.0.0:8000
-
       - name: Run Tests
         env:
           DJ_DOMAIN: http://localhost:8080
