--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-cors-headers==3.2.1
 psycopg2-binary==2.8.4
 requests==2.23.0
 shortuuid==1.0.1
-sentry-sdk==0.14.3
+#sentry-sdk==0.14.3
 # temporary add test requirements to prod, lol
 model_mommy
 freezegun
