--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue-toasted": "^1.1.28",
     "vuex": "^3.1.3"
